tests/baselines/reference/nonPrimitiveIndexingWithForInSupressError.errors.txt
error TS5102: Option 'suppressImplicitAnyIndexErrors' has been removed. Please remove it from your configuration.
nonPrimitiveIndexingWithForInSupressError.ts(3,17): error TS2454: Variable 'a' is used before being assigned.
nonPrimitiveIndexingWithForInSupressError.ts(4,17): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
  No index signature with a parameter of type 'string' was found on type '{}'.


!!! error TS5102: Option 'suppressImplicitAnyIndexErrors' has been removed. Please remove it from your configuration.
==== nonPrimitiveIndexingWithForInSupressError.ts (2 errors) ====
    var a: object;
    
    for (var key in a) {
                    ~
!!! error TS2454: Variable 'a' is used before being assigned.
        var value = a[key];
                    ~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{}'.
    }
    